# But_heres_my_number

./: Makefile  README.md  pyproject.toml
data/input/: functions_definition.json
src/: __main__.py  parthing.py
use_terminal/: __init__.py  color.py  vector.py
